chore: rename imprint to experience

--- a/docs/BEP007.md
+++ b/docs/BEP007.md
@@ -44,7 +44,7 @@
 │ ┌─────────────────────────────────────┐ │
 │ │        Extended Metadata            │ │
 │ │  • Persona definitions              │ │
-│ │  • Imprint summaries                │ │
+│ │  • Experience summaries                │ │
 │ │  • Voice & animation assets         │ │
 │ │  • Vault storage references         │ │
 │ └─────────────────────────────────────┘ │
@@ -73,7 +73,7 @@
 1. **BEP007** manages agent tokens and state
 2. **Logic Contracts** provide agent-specific functionality
 3. **Governance** controls upgrades and emergency functions
-4. **Imprint Modules** extend agent capabilities (optional)
+4. **Experience Modules** extend agent capabilities (optional)
 
 ---
 
@@ -94,7 +94,7 @@ uint256 tokenId = bep007.createAgent(
 // Create agent with rich personality and capabilities
 IBEP007.AgentMetadata memory metadata = IBEP007.AgentMetadata({
     persona: '{"personality": "helpful", "tone": "professional", "expertise": ["finance", "research"]}',
-    imprint: "Financial research assistant specialized in market analysis",
+    experience: "Financial research assistant specialized in market analysis",
     voiceHash: "voice_profile_abc123",
     animationURI: "ipfs://agent-avatar-animation",
     vaultURI: "ipfs://agent-extended-data",
@@ -159,7 +159,7 @@ enum Status { Active, Paused, Terminated }
 ```solidity
 struct AgentMetadata {
     string persona;       // JSON-encoded personality traits, style, tone
-    string imprint;        // Short summary of agent's role/purpose
+    string experience;        // Short summary of agent's role/purpose
     string voiceHash;     // Reference ID to stored audio profile
     string animationURI;  // URI to video or animation file
     string vaultURI;      // URI to extended data storage
@@ -241,10 +241,10 @@ function setLogicAddress(uint256 tokenId, address newLogic)
     external onlyAgentOwner(tokenId)
 ```
 
-#### **Imprint Module Integration**
+#### **Experience Module Integration**
 ```solidity
-// Register imprint module for agent
-function registerImprintModule(uint256 tokenId, address moduleAddress) 
+// Register experience module for agent
+function registerExperienceModule(uint256 tokenId, address moduleAddress) 
     external onlyAgentOwner(tokenId)
 ```
 
@@ -398,7 +398,7 @@ function terminate(uint256 tokenId) external onlyAgentOwner(tokenId) {
 ### **Persona Definition**
 ```json
 {
-  "imprint": "helpful and analytical",
+  "experience": "helpful and analytical",
   "tone": "professional but approachable",
   "expertise": ["financial analysis", "market research", "risk assessment"],
   "communication_style": "concise and data-driven",
@@ -407,10 +407,10 @@ function terminate(uint256 tokenId) external onlyAgentOwner(tokenId) {
 }
 ```
 
-### **Imprint Summary**
+### **Experience Summary**
 ```solidity
 // Short, human-readable description
-string imprint = "AI financial advisor specializing in cryptocurrency market analysis and portfolio optimization";
+string experience = "AI financial advisor specializing in cryptocurrency market analysis and portfolio optimization";
 ```
 
 ### **Voice Profile**
@@ -540,7 +540,7 @@ require(bytes(metadataURI).length > 0, "Metadata URI required");
 // Create with proper metadata
 AgentMetadata memory metadata = AgentMetadata({
     persona: '{"personality": "helpful", "expertise": ["domain"]}',
-    imprint: "Clear description of agent purpose",
+    experience: "Clear description of agent purpose",
     voiceHash: "voice_profile_id",
     animationURI: "ipfs://animation_hash",
     vaultURI: "ipfs://vault_hash",
@@ -586,7 +586,7 @@ if (state.balance > 1 ether) {
 // Update metadata atomically
 AgentMetadata memory currentMetadata = bep007.getAgentMetadata(tokenId);
 currentMetadata.persona = newPersonaJSON;
-currentMetadata.imprint = newImprintSummary;
+currentMetadata.experience = newExperienceSummary;
 bep007.updateAgentMetadata(tokenId, currentMetadata);
 
 // Verify vault hash when updating
@@ -620,7 +620,7 @@ emit LogicUpgraded(tokenId, oldLogic, newLogic);
 3. **State Caching** - Cache agent state locally to reduce view calls
 4. **Event Monitoring** - Use events for state change notifications
 
-### **Imprint Management**
+### **Experience Management**
 ```solidity
 // Efficient state queries
 mapping(uint256 => State) private _agentStates;
@@ -690,21 +690,21 @@ contract BEP007GovernanceEnhanced {
 }
 ```
 
-### **With Imprint Modules**
+### **With Experience Modules**
 ```solidity
-// Imprint modules extend agent capabilities
-contract ImprintModule {
-    function storeImprint(uint256 agentId, bytes calldata data) external {
-        // Store agent imprint data
+// Experience modules extend agent capabilities
+contract ExperienceModule {
+    function storeExperience(uint256 agentId, bytes calldata data) external {
+        // Store agent experience data
     }
     
-    function retrieveImprint(uint256 agentId) external view returns (bytes memory) {
-        // Retrieve agent imprint
+    function retrieveExperience(uint256 agentId) external view returns (bytes memory) {
+        // Retrieve agent experience
     }
 }
 
 // Register with agent
-bep007.registerImprintModule(tokenId, imprintModuleAddress);
+bep007.registerExperienceModule(tokenId, experienceModuleAddress);
 ```
 
 ---
@@ -715,7 +715,7 @@ The BEP007 core contract is designed for extensibility with planned features:
 
 - **Cross-Chain Agents** - Deploy agents across multiple blockchains
 - **Agent Collaboration** - Multi-agent coordination protocols
-- **Advanced Imprint** - Hierarchical imprint systems
+- **Advanced Experience** - Hierarchical experience systems
 - **Performance Metrics** - Built-in analytics and monitoring
 - **Agent Marketplace** - Decentralized agent trading
 - **Reputation System** - Agent performance tracking
@@ -734,6 +734,6 @@ The BEP007 core contract is designed for extensibility with planned features:
 ✅ **Financial Integration** - Built-in balance management for gas fees  
 ✅ **Security Architecture** - Multi-layer protection and emergency controls  
 ✅ **Governance Integration** - Upgradeable and governable design  
-✅ **Extensible Framework** - Imprint modules and future enhancement support  
+✅ **Extensible Framework** - Experience modules and future enhancement support  
 
 The BEP007 contract enables the creation of truly autonomous AI agents as tradeable NFTs, combining the benefits of digital ownership with intelligent automation capabilities.
